# AutodeskMachineControlFramework

./: .gitignore  .gitmodules  3RD_PARTY.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  _config.yml  build_clean.bat  build_clean.sh  build_clean_clientonly_linux64.sh  build_clean_crosscompile.sh  build_clean_linux64.sh  build_clean_rpi.sh  build_clean_win64.bat  build_clean_win64onlinux.sh  githash.txt  index.md  overview.md  rpi_install_deps.sh  solutions.md  whatsnew.md
Drivers/Camera/Libraries/raspicam/: CMakeLists.txt  RaspiStill.cpp  RaspiStill.hpp
Drivers/Camera/Libraries/raspicamera/: CMakeLists.txt  LICENSE
Drivers/OPCUA/LibOpen62541/: CMakeLists.txt
Drivers/OPCUA/LibOpen62541/Implementation/: libopen62541.cpp  libopen62541_base.cpp  libopen62541_base.hpp  libopen62541_opcclient.cpp  libopen62541_opcclient.hpp
Drivers/OPCUA/LibOpen62541/Interfaces/: libopen62541_abi.hpp  libopen62541_interfaceexception.cpp  libopen62541_interfaceexception.hpp  libopen62541_interfacejournal.cpp  libopen62541_interfacejournal.hpp  libopen62541_interfaces.hpp  libopen62541_interfacewrapper.cpp
Drivers/OPCUA/LibOpen62541/Lib/: open62541.lib
Drivers/RayLase/SchemaExtractor/: CMakeLists.txt  SchemaExtractor.cpp
Drivers/ScanLab/: .gitignore  CMakeLists.txt  ThirdPartyResources.xml  driverpackage.xml
Drivers/ScanLab/ACT/: LibMCDriver_ScanLab.xml  generateInterfaces.bat
Drivers/ScanLab/Headers/CppDynamic/: libmcdriver_scanlab_abi.hpp  libmcdriver_scanlab_dynamic.h  libmcdriver_scanlab_dynamic.hpp  libmcdriver_scanlab_types.hpp
Drivers/ScanLab/Implementation/: libmcdriver_scanlab.cpp  libmcdriver_scanlab_base.cpp  libmcdriver_scanlab_base.hpp  libmcdriver_scanlab_configurationpreset.cpp  libmcdriver_scanlab_configurationpreset.hpp  libmcdriver_scanlab_driver.cpp  libmcdriver_scanlab_driver.hpp  libmcdriver_scanlab_driver_scanlab.cpp  libmcdriver_scanlab_driver_scanlab.hpp  libmcdriver_scanlab_driver_scanlab_rtc5.cpp  libmcdriver_scanlab_driver_scanlab_rtc5.hpp  libmcdriver_scanlab_driver_scanlab_rtc6.cpp  libmcdriver_scanlab_driver_scanlab_rtc6.hpp  libmcdriver_scanlab_driver_scanlab_rtc6xn.cpp  libmcdriver_scanlab_driver_scanlab_rtc6xn.hpp  libmcdriver_scanlab_gpiosequence.cpp  libmcdriver_scanlab_gpiosequence.hpp  libmcdriver_scanlab_gpiosequenceinstance.cpp  libmcdriver_scanlab_gpiosequenceinstance.hpp  libmcdriver_scanlab_managedptr.hpp  libmcdriver_scanlab_nlightafxprofileselector.cpp  libmcdriver_scanlab_nlightafxprofileselector.hpp  libmcdriver_scanlab_rtccontext.cpp  libmcdriver_scanlab_rtccontext.hpp  libmcdriver_scanlab_rtcjob.cpp  libmcdriver_scanlab_rtcjob.hpp  libmcdriver_scanlab_rtcrecording.cpp  libmcdriver_scanlab_rtcrecording.hpp  libmcdriver_scanlab_rtcrecordinginstance.cpp  libmcdriver_scanlab_rtcrecordinginstance.hpp  libmcdriver_scanlab_rtcselector.cpp  libmcdriver_scanlab_rtcselector.hpp  libmcdriver_scanlab_sdk.cpp  libmcdriver_scanlab_sdk.hpp  libmcdriver_scanlab_uartconnection.cpp  libmcdriver_scanlab_uartconnection.hpp
Drivers/ScanLab/Interfaces/: libmcdriver_interfacewrapper.cpp  libmcdriver_scanlab_abi.hpp  libmcdriver_scanlab_interfaceexception.cpp  libmcdriver_scanlab_interfaceexception.hpp  libmcdriver_scanlab_interfaces.hpp  libmcdriver_scanlab_interfacewrapper.cpp  libmcdriver_scanlab_types.hpp
Drivers/ScanLabOIE/LibOIE/: CMakeLists.txt
Drivers/ScanLabOIE/LibOIE/Implementation/: liboie.cpp  liboie_base.cpp  liboie_base.hpp  liboie_connection.cpp  liboie_connection.hpp  liboie_connectioniterator.cpp  liboie_connectioniterator.hpp  liboie_datapackage.cpp  liboie_datapackage.hpp  liboie_iterator.cpp  liboie_iterator.hpp  liboie_octdatapackage.cpp  liboie_octdatapackage.hpp  liboie_octdatapackageiterator.cpp  liboie_octdatapackageiterator.hpp  liboie_pyrodatapackage.cpp  liboie_pyrodatapackage.hpp  (+34 more)
Libraries/SQLite/: CMakeLists.txt  build.bat  sqlite3.lib
Libraries/libMQTT/: CMakeLists.txt
Libraries/libMQTT/ACT/: LibMQTT.xml
Libraries/libMQTT/Implementation/: libmqtt.cpp  libmqtt_base.cpp  libmqtt_base.hpp  libmqtt_mqttcontext.cpp  libmqtt_mqttcontext.hpp
Libraries/libMQTT/Interfaces/: libmqtt_dynamic.h  libmqtt_dynamic.hpp  libmqtt_interfaceexception.cpp  libmqtt_interfaceexception.hpp  libmqtt_interfaces.hpp  libmqtt_interfacewrapper.cpp  libmqtt_types.hpp
Libraries/restclient-cpp/: CMakeLists.txt  connection.cc  connection.h  helpers.cc  restclient.cc  restclient.h  version.h
Plugins/Demo/: CMakeLists.txt  mcplugin_demo.cpp
Plugins/UI/: CMakeLists.txt  mc_userinterface.cpp
SDK/: CMakeLists.txt
SDK/ACT/: generateInterfaces.bat  libAMCF.xml
SDK/Headers/C/: libamcf.h  libamcf_types.h
SDK/Headers/CDynamic/: libamcf_dynamic.cc  libamcf_dynamic.h  libamcf_types.h
SDK/Headers/CSharp/: LibAMCF.cs
SDK/Headers/Cpp/: libamcf_abi.hpp  libamcf_implicit.hpp  libamcf_types.hpp
SDK/Headers/CppDynamic/: libamcf_abi.hpp  libamcf_dynamic - Copy.hpp  libamcf_dynamic.h  libamcf_dynamic.hpp  libamcf_types.hpp
SDK/Headers/Go/: cfunc.go  libamcf.go  libamcf_dynamic.cc  libamcf_dynamic.h  libamcf_types.h
SDK/Headers/NodeJS/: binding.gyp  libamcf_dynamic.h  libamcf_nodeaddon.cc  libamcf_nodewrapper.cc  libamcf_nodewrapper.h
SDK/Headers/Pascal/: Unit_LibAMCF.pas
SDK/Headers/Python/: LibAMCF.py
SDK/Implementation/: libamcf.cpp  libamcf_asyncrequest.cpp  libamcf_asyncrequest.hpp  libamcf_base.cpp  libamcf_base.hpp  libamcf_connection.cpp  libamcf_connection.hpp  libamcf_connectionstate.cpp  libamcf_connectionstate.hpp  libamcf_datastream.cpp  libamcf_datastream.hpp  libamcf_operationresult.cpp  libamcf_operationresult.hpp  libamcf_resthandler.cpp  libamcf_resthandler.hpp  libamcf_streamupload.cpp  libamcf_streamupload.hpp
SDK/Interfaces/: libamcf_abi.hpp  libamcf_interfaceexception.cpp  libamcf_interfaceexception.hpp  libamcf_interfaces.hpp  libamcf_interfacewrapper.cpp  libamcf_types.hpp
SDK/WASM/: build.bat  buildargs.txt  libamcf_header.js  libamcf_implementation.js  libamcf_implementation.wasm  libamcf_implementation.worker.js  libamcf_instance.js  runwasmtest.bat  runwasmtest.py  wasmtest.html
(+1956 files in other folders)
